добавил больше опции для слайдера, а также добавил ховер кнопкам и ссылкам

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -8,6 +8,11 @@
 	--text-color: #343A40;
 	--basic-green: #19B37D;
 	--extra-green: #188A7B;
+	--hover-button: #258D7F;
+	--hover-button__blue: linear-gradient(268deg, #0057FF 1.64%, #259BFF 97.95%);
 	--basic-gold: #A07855;
 	--basic-link: #6B707E;
+	--button-blue: #0057FF;
+	--link--hover: #9FA1A7;
+	--basic-transition: 0.5s ease;
 }
