--- a/src/scss/blocks/_demonstration.scss
+++ b/src/scss/blocks/_demonstration.scss
@@ -49,6 +49,7 @@
     height: 12px;
     opacity: 1;
     background-color: var(--slider-white);
+    cursor: pointer;
 }
 
 .demonstration__pagination .swiper-pagination-bullet-active {
