--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -7,7 +7,6 @@
 .menu__list--flex {
     display: flex;
     align-items: center;
-    // margin-left: 179px;
     margin-right: 40px;
 
     .menu__item {
@@ -23,6 +22,11 @@
         font-weight: 400;
         font-family: var(--font-main);
         color: var(--basic-link);
+
+        &:hover {
+            transition: var(--basic-transition);
+            color: var(--link--hover);
+        }
     }
 }
 
@@ -42,15 +46,20 @@
 }
 
 .menu__action--blue {
-    box-shadow: 0px 2px 22px 0px rgba(0, 87, 255, 0.43);
-    background: linear-gradient(268deg, #0057FF 1.64%, #259BFF 97.95%);
     border-radius: 5px;
+    background: var(--button-blue);
 
     .menu__sign {
         font-family: var(--font-accent);
         font-size: 16px;
         color: var(--basic-white);
         margin-right: 8px;
+    }
+
+    &:hover {
+        transition: var(--basic-transition);
+        box-shadow: 0px 2px 22px 0px rgba(0, 87, 255, 0.43);
+        background: var(--hover-button__blue);
     }
 }
 
@@ -68,10 +77,33 @@
     box-shadow: 0px 2px 22px 0px rgba(23, 120, 107, 0.43);
     border-radius: 5px;
 
+    .menu__image {
+        width: 20px;
+        height: 20px;
+        background-image: url("../../img/icon/icon__buy.svg");
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+
     .menu__sign {
         color: var(--extra-green);
         font-family: var(--font-main);
         font-weight: 600;
+    }
+
+    &:hover {
+        background: var(--hover-button);
+        box-shadow: 0px 1px 20px 0px rgba(102, 56, 19, 0.10), 0px 0px 4px 0px rgba(32, 19, 9, 0.08);
+        transition: var(--basic-transition);
+
+
+        .menu__sign {
+            color: var(--basic-white);
+        }
+
+        .menu__image {
+            background-image: url("../../img/icon/icon__buy--hover.svg");
+        }
     }
 }
 
