поправил иконку, которая не отобрадалась

--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -80,7 +80,7 @@
     .menu__image {
         width: 20px;
         height: 20px;
-        background-image: url("../../img/icon/icon__buy.svg");
+        background-image: url("../img/icon/icon__buy.svg");
         background-repeat: no-repeat;
         background-position: right;
     }
@@ -102,7 +102,7 @@
         }
 
         .menu__image {
-            background-image: url("../../img/icon/icon__buy--hover.svg");
+            background-image: url("../img/icon/icon__buy--hover.svg");
         }
     }
 }
